@@ -5,6 +5,7 @@ CHANGES IN CUPS V1.3.10
 
 	- Documentation fixes (STR #2994, STR #2995, STR #3008, STR #3056,
 	  STR #3057)
+	- Long job names caused problems with some PJL printers (STR #3125)
 	- The lpq command did not work when showing all destinations (STR #3117)
 	- The scheduler used a codeset name of UTF8 which is not supported on
 	  Solaris (STR #3113)
